test/types/string/dmk/substring/substringBadRange-codepoint.good
str1[11:byteIndex..12:byteIndex] = lm
str2[11:codepointIndex..12:codepointIndex] = lm
substringBadRange-codepoint.chpl:8: error: halt reached - range 11..15 out of bounds for string with length 13
