test/types/string/dmk/substring/substringBadRange-codepoint.chpl
var str1 = "abcdefghijklm";

writeln("str1[11:byteIndex..12:byteIndex] = ", str1[11:byteIndex..12:byteIndex]);

var str2 = "åbçdèfghíjklm";

writeln("str2[11:codepointIndex..12:codepointIndex] = ", str2[11:codepointIndex..12:codepointIndex]);
writeln("str2[11:codepointIndex..15:codepointIndex] = ", str2[11:codepointIndex..15:codepointIndex]);
